2008-10-13  Cody Russell <cody@jhu.edu>

	* test/testfilechooser.c: Fix option parsing so that -a and
	--action work correctly.

2008-10-13  Christian Persch <chpe@gnome.org>

	Bug 555386 – format not a string literal and no format arguments

	* gtk/gtkiconfactory.c
	* gtk/gtkprintbackend.c
	* gtk/gtkprintoperation.c
	* gtk/gtkthemes.c
	* gtk/tests/builder.c
	* modules/other/gail/gailtextview.c
	* tests/testmerge.c: Use printf safely.

2008-10-13  Christian Persch <chpe@gnome.org>

	Bug 555724 – gtkcellrendereraccel not initialised correctly

	* gtk/gtkcellrendereraccel.c: Initialise the cell text.

2008-10-12  Simos Xenitellis  <simos@gnome.org>

	Bug 555625 – Updated gtk_compose_seqs_compact table 
	(gtkimcontextsimpleseqs.h)
	
	* gtk/gtkimcontextsimpleseqs.c: Updated the compose sequence table.
	In this update we removed a further set of compose sequences that
	are otherwise covered by check_algorithmically(). 

	* gtk/gtkimcontextsimple.c: Updated table value that shows how many 
	distinct first values exist in the compose sequences. 
	Change from 22 to 20.
	
2008-10-11  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktoolbar.c: Revert the GtkSettings::gtk-toolbar-icon-size
	part of the previous change, since it doesn't work correctly without
	extra complication, and using custom icon sizes doesn't make too
	much sense in a desktop-wide setting.

2008-10-11  Matthias Clasen  <mclasen@redhat.com>

	Bug 555186 – Setting gtk-toolbar-icon-size with custom icon_size

	* gtk/gtktoolbar.c: Turn GtkToolbar::icon-size and
	GtkSettings::gtk-toolbar-icon-size into int properties, to
	allow the use of app-registered icon sizes.

2008-10-11  Christian Dywan  <christian@imendio.com>

	Bug 555676 – gtk_widget_real_grab_focus assumes toplevel == window

	* gtk/gtkwidget.c (gtk_widget_real_grab_focus):
        Actually test for GTK_IS_WINDOW *and* GTK_WIDGET_TOPLEVEL

2008-10-10  Behdad Esfahbod  <behdad@gnome.org>

	Bug 551355 – [PATCH] Make glib build with libtool 2.2
